Working on fixing issue on safari mobile.
Image appears in front of main content on initial scroll down.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -101,7 +101,7 @@ nav#nav
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 1;
+	z-index: -1;
 
 	h2
 	{
